# gds-idea-app-kit

./: .gitignore  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/gds_idea_app_kit/: __init__.py  cli.py  init.py  manifest.py  migrate.py  prerequisites.py  provide_role.py  smoke_test.py  update.py
src/gds_idea_app_kit/templates/common/: LICENCE  README.md.template  app.py  ci_cd_cdk_app.yml  ci_pr_cdk_app.yml  dependabot.yml  devcontainer.json  docker-compose.yml  gitignore-extra
src/gds_idea_app_kit/templates/dash/: Dockerfile  dash_app.py  pyproject.toml.template
src/gds_idea_app_kit/templates/dev_mocks/: dev_mock_user.json
src/gds_idea_app_kit/templates/fastapi/: Dockerfile  fastapi_app.py  pyproject.toml  pyproject.toml.template
src/gds_idea_app_kit/templates/streamlit/: Dockerfile  pyproject.toml  pyproject.toml.template  streamlit_app.py
tests/: conftest.py  test_cli.py  test_init.py  test_integration.py  test_manifest.py  test_migrate.py  test_prerequisites.py  test_provide_role.py  test_smoke_test.py  test_update.py
