[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gds-idea-app-kit"
version = "0.1.0"
description = "CLI tool for scaffolding and maintaining GDS IDEA web apps on AWS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "tomlkit>=0.12.0",
    "boto3>=1.26.0",
]

[project.scripts]
idea-app = "gds_idea_app_kit.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/gds_idea_app_kit"]

[tool.hatch.build]
include = [
    "src/gds_idea_app_kit/**/*.py",
    "src/gds_idea_app_kit/templates/**",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["src/gds_idea_app_kit/templates"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["gds_idea_app_kit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require Docker (deselect with '-m \"not integration\"')",
]
